# openscad-mcp

./: .coveragerc  .dockerignore  .gitignore  API.md  DEPLOYMENT_SUMMARY.md  Dockerfile  LICENSE  MANIFEST.in  OPENSCAD_MCP_CLEANUP_REPORT.md  README.md  RELEASE_CLEANUP_PLAN.md  RELEASE_NOTES_v1.0.0.md  cleanup_for_release.sh  openscad_rendering_analysis.md  openscad_response_optimization_final.md  pyproject.toml  pytest.ini
examples/: basic_usage.py
examples/config/: mcp.json  mcp_config.json
examples/rendering/: diagnose_qr_window.py  render_card_chamber.py  render_dealing_mechanism.py  render_poc_views.py  scad_renderer.py
openscad-mcp-server/: .env.example  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  README.md  pyproject.toml
openscad-mcp-server/.github/workflows/: release.yml
openscad-mcp-server/examples/rendering/: render_all_parts.py  render_all_views.py  verify_fixes.py
openscad-mcp-server/src/openscad_mcp/: __init__.py  server.py  types.py
openscad-mcp-server/tests/: __init__.py  conftest.py  test_openscad_mcp.py
src/openscad_mcp/: __main__.py  server.py  types.py
src/openscad_mcp/utils/: __init__.py  config.py
tests/: pytest.ini  test_documentation.md  test_edge_cases.py  test_performance.py
tests/unit/: __init__.py  test_config.py
workflows/: ci.yml
